Front/ingress-azure.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: encheres-royale-ingress
  annotations:
    # cert-manager will automatically create the certificate
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - encheres-app.francecentral.cloudapp.azure.com
      secretName: encheres-tls-secret
  rules:
    - host: encheres-app.francecentral.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-service
                port:
                  number: 80
