Front/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: encheres-royale-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - encheres.info
      secretName: encheres-local-tls
  rules:
    - host: encheres.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-service
                port:
                  number: 80
